fix 0018764: Fields on campaign composer are wider than the content container on small screens

--- a/less/legacy.less
+++ b/less/legacy.less
@@ -123,9 +123,9 @@ table.well tr td{padding:10px 20px;padding-right:20px}
 	#navigation .navbar-toggle{
 		margin-top:14px
 	}
-	.well{padding:0}
+	.well{padding:7px}
 	/* need this to overwrite sizes of inputs */
-	input.form-control,select.form-control{width:100%}
+	input.form-control,select.form-control{width:100%; margin-left:0px!important;margin-right:0px!important}
 }
 
 @media screen and (min-width: 768px){
